--- a/FrontEnd/HTML/Login.html
+++ b/FrontEnd/HTML/Login.html
@@ -24,8 +24,8 @@
           </div>
         </nav>
         <h1 style="text-align: center; margin-top: 30;">Login</h1>
+        <p id="messages" style="color: black;"></p>
         <form class="myform" action="/login" method="POST">
-            <h3 id="messages" style="color: black;"></h3>
             <div class="form-group">
               <label for="username">User Name</label>
               <input type="username" required class="form-control" name="username">
@@ -39,6 +39,5 @@
           </form>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        <script src="../../Backend/Passport/passport-config.js"></script>
     </body>
 </html>
